# mindly-py

./: README.md  config.yaml  mindlycli.py  pyproject.toml
mindly/: __init__.py  __main__.py  cli.py  exceptions.py  mindly.py
